# zkCoprocessor

./: .gitignore  Cargo.toml  README.md
scripts/: deploy-aws.sh  setup-zisk.sh
sp1-tx-proof/: Cargo.toml
sp1-tx-proof/src/: main.rs
src/: benchmark.rs  main.rs
src/zk/: mod.rs  prover.rs  sp1_prover.rs
zisk-tx-proof/: Cargo.toml  build.rs
zisk-tx-proof/proof/: global_challenges.json  proof_values.json  publics.json  result.json
zisk-tx-proof/proof/proofs/: vadcop_final_proof.json
zisk-tx-proof/src/: main.rs
