[package]
name = "zkcoprocessor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }

# TigerBeetle client - using the unofficial but maintained crate
tigerbeetle-unofficial = "0.12.2+0.16.45"

# Add these for Ethereum integration:
ethers = { version = "2.0", features = ["rustls"] }
hex = "0.4"
sha2 = "0.10"

# SP1 ZK Proof System
sp1-sdk = "*"
sp1-lib = "4.0.0"
async-trait = "0.1"
bincode = "1.3"